@startuml 观察者模式

title 观察者模式 - 道具与敌机交互

interface Observer {
    +update(observable: Observable): void
}

interface Observable {
    +addObserver(observer: Observer): void
    +removeObserver(observer: Observer): void
    +notifyObservers(): void
}

abstract class Drop {
    -observers: List<Observer>
    +addObserver(observer: Observer): void
    +removeObserver(observer: Observer): void
    +notifyObservers(): void
    +activate(heroAircraft: HeroAircraft, game: Game): void
}

class Bomb {
    +Bomb(int locationX, int locationY, int speedX, int speedY)
    +activate(heroAircraft: HeroAircraft, game: Game): void
}

class Freeze {
    +Freeze(int locationX, int locationY, int speedX, int speedY)
    +activate(heroAircraft: HeroAircraft, game: Game): void
}

class EnemyObserver {
    -enemy: AbstractAircraft
    +EnemyObserver(enemy: AbstractAircraft)
    +update(observable: Observable): void
    +getEnemy(): AbstractAircraft
}

class BulletObserver {
    -bullet: BaseBullet
    +BulletObserver(bullet: BaseBullet)
    +update(observable: Observable): void
    +getBullet(): BaseBullet
}

abstract class AbstractAircraft {
    +decreaseHp(damage: int): void
    +vanish(): void
    +setSpeedX(x: int): void
    +setSpeedY(y: int): void
    +updateFreezeState(): void
}

class Boss {
    +Boss(int locationX, int locationY, int speedX, int speedY, int hp)
}

class MobEnemy {
    +MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteEnemy {
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class ElitePlusEnemy {
    +ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteProEnemy {
    +EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

abstract class BaseBullet {
    +vanish(): void
    +updateFreezeState(): void
}

Observable <|.. Drop
Observer <|.. EnemyObserver
Observer <|.. BulletObserver

Drop <|-- Bomb
Drop <|-- Freeze

EnemyObserver --> AbstractAircraft
BulletObserver --> BaseBullet

AbstractAircraft <|-- Boss
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy

note left of Observer
  观察者接口
  定义更新方法
end note

note right of Observable
  被观察者接口
  定义添加/移除观察者和通知方法
end note

note bottom of EnemyObserver
  敌机观察者
  监听道具激活事件
  炸弹：Boss减血，普通敌机消失
  冰冻：冻结敌机移动
end note

note bottom of BulletObserver
  子弹观察者
  监听炸弹道具
  炸弹激活时清除子弹
end note

@enduml
